--- a/plutus-use-cases/plutus-use-cases.cabal
+++ b/plutus-use-cases/plutus-use-cases.cabal
@@ -77,7 +77,7 @@ test-suite plutus-use-cases-test
         Spec.GameStateMachine
         Spec.MultiSig
         Spec.MultiSigStateMachine
-        Spec.Size
+        Spec.Lib
         Spec.Vesting
     default-language: Haskell2010
     ghc-options: -Wall -Wnoncanonical-monad-instances
@@ -87,12 +87,15 @@ test-suite plutus-use-cases-test
         base >=4.9 && <5,
         containers -any,
         hedgehog -any,
+        plutus-tx -any,
         plutus-wallet-api -any,
         plutus-use-cases -any,
         plutus-emulator -any,
+        prettyprinter -any,
         tasty -any,
         tasty-hunit -any,
         tasty-hedgehog >=0.2.0.0,
+        tasty-golden -any,
         text -any,
         lens -any,
         mtl -any
