--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -84,5 +84,6 @@ test-suite plutus-book-test
                      , plutus-book -any
                      , plutus-emulator -any
                      , plutus-wallet-api -any
+                     , text
   ghc-options:         -Wall
   default-language:    Haskell2010
