--- a/deployment/nixops/secrets.json.example
+++ b/deployment/nixops/secrets.json.example
@@ -1,7 +1,14 @@
 {
-        "githubClientId": "someclientid",
-        "githubClientSecret": "someclientsecret",
-        "jwtSignature": "somesignature",
+        "plutus": {
+                "githubClientId": "someclientid",
+                "githubClientSecret": "someclientsecret",
+                "jwtSignature": "somesignature"
+        },
+        "marlowe": {
+                "githubClientId": "someclientid",
+                "githubClientSecret": "someclientsecret",
+                "jwtSignature": "somesignature"
+        },
         "pagerdutyKey": "somekey",
         "googleClientID": "somekey",
         "googleClientSecret": "somekey"
