--- a/plutus-tx/plutus-tx.cabal
+++ b/plutus-tx/plutus-tx.cabal
@@ -74,6 +74,7 @@ library plutus-tx-compiler
     exposed-modules:
         Language.PlutusTx.Plugin
         Language.PlutusTx.Builtins
+        Language.PlutusTx.Sealed
         Language.PlutusTx.PLCTypes
         Language.PlutusTx.PIRTypes
         Language.PlutusTx.Utils
