--- a/plutus-playground-server/plutus-playground-server.cabal
+++ b/plutus-playground-server/plutus-playground-server.cabal
@@ -53,6 +53,7 @@ library
         cookie -any,
         exceptions -any,
         file-embed -any,
+        filepath -any,
         http-client -any,
         http-client-tls -any,
         http-conduit -any,
@@ -73,6 +74,7 @@ library
         servant-client-core -any,
         servant-purescript -any,
         servant-server -any,
+        temporary -any,
         template-haskell -any,
         text -any,
         time -any,
