--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -48,7 +48,15 @@ library
     default-language: Haskell2010
     hs-source-dirs: src
     exposed-modules:
-          Game.Guess
+          NonFungible.NonFungible1
+        , NonFungible.NonFungible2
+        , NonFungible.NonFungible3
+        , NonFungible.NonFungible4
+        , NonFungible.NonFungible5
+        , NonFungible.NonFungible6
+        , NonFungible.NonFungible7
+        , NonFungible.NonFungible8
+        , Game.Guess
         , Multi.Vesting
         , OffChain.Hello
         , OffChain.PayToWallet
@@ -62,6 +70,7 @@ library
     build-depends:
       base >=4.9 && <5,
       bytestring -any,
+      mtl -any,
       template-haskell >=2.13.0.0,
       text -any,
       language-plutus-core -any,
@@ -81,6 +90,14 @@ test-suite plutus-book-test
                      , OffChain.HelloSpec
                      , OffChain.PayToWalletSpec
                      , OffChain.TriggerSpec
+                     , NonFungible.NonFungible1Spec
+                     , NonFungible.NonFungible2Spec
+                     , NonFungible.NonFungible3Spec
+                     , NonFungible.NonFungible4Spec
+                     , NonFungible.NonFungible5Spec
+                     , NonFungible.NonFungible6Spec
+                     , NonFungible.NonFungible7Spec
+                     , NonFungible.NonFungible8Spec
                      , Parameters.CrowdSpec
                      , Token.FungibleSpec
                      , Utils
