--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -48,7 +48,8 @@ library
         Language.Plutus.Contract.Effects.ExposeEndpoint
         Language.Plutus.Contract.Effects.WatchAddress
         Language.Plutus.Contract.Effects.WriteTx
-        Language.Plutus.Contract.Emulator
+        Language.Plutus.Contract.Test
+        Language.Plutus.Contract.Trace
         Language.Plutus.Contract.Prompt.Event
         Language.Plutus.Contract.Prompt.Hooks
         Language.Plutus.Contract.Record
@@ -78,77 +79,9 @@ library
         extensible-effects -any,
         transformers-base -any,
         monad-control -any,
-        mmorph -any
-
-library examples
-    import: lang
-    hs-source-dirs: examples/lib
-    default-language: Haskell2010
-    exposed-modules:
-        Examples.Game
-        Examples.Crowdfunding
-    build-depends:
-        plutus-contract -any,
-        plutus-use-cases -any,
-        plutus-wallet-api -any,
-        plutus-emulator -any,
-    build-depends:
-        base >= 4.7,
-        lens -any,
-        containers -any,
-        aeson -any,
-        mtl -any
-
-executable contract-guessing-game
-    default-language: Haskell2010
-    main-is: Main.hs
-    hs-source-dirs: examples/exe/game
-    build-depends:
-        plutus-contract -any,
-        examples
-    build-depends:
-        base >=4.7 && <5
-
-executable contract-crowdfunding
-    default-language: Haskell2010
-    main-is: Main.hs
-    hs-source-dirs: examples/exe/crowdfunding
-    build-depends:
-        plutus-contract -any,
-        examples
-    build-depends:
-        base >=4.7 && <5
-
-test-suite plutus-contract-test
-    import: lang
-    type: exitcode-stdio-1.0
-    main-is: Spec.hs
-    hs-source-dirs: test
-    other-modules:
-        Spec.Crowdfunding
-        Spec.Contract
-        Spec.Game
-        Spec.HUnit
-        Spec.State
-    build-depends:
-        examples, 
-        plutus-emulator -any,
-        plutus-contract -any,
-        plutus-wallet-api -any,
-        plutus-use-cases -any
-    build-depends:
-        base >=4.9 && <5,
-        containers -any,
-        hedgehog -any,
+        mmorph -any,
         tasty -any,
-        tasty-hunit -any,
-        tasty-hedgehog >=0.2.0.0,
-        text -any,
-        mtl -any,
-        aeson -any,
-        lens -any,
-        transformers -any,
-        extensible-effects -any
+        tasty-hunit -any
 
 test-suite contract-doctests
     type: exitcode-stdio-1.0
@@ -168,3 +101,28 @@ test-suite contract-doctests
       plutus-wallet-api -any,
       prettyprinter -any,
       containers -any
+
+test-suite plutus-contract-test
+    import: lang
+    type: exitcode-stdio-1.0
+    main-is: Spec.hs
+    hs-source-dirs: test
+    other-modules:
+        Spec.Contract
+        Spec.State
+    build-depends:
+        base >=4.9 && <5,
+        containers -any,
+        hedgehog -any,
+        tasty -any,
+        tasty-hunit -any,
+        text -any,
+        mtl -any,
+        aeson -any,
+        lens -any,
+        transformers -any,
+        extensible-effects -any,
+        plutus-emulator -any,
+        plutus-contract -any,
+        plutus-wallet-api -any,
+        plutus-tx -any
