--- a/plutus-tx/plutus-tx.cabal
+++ b/plutus-tx/plutus-tx.cabal
@@ -46,6 +46,7 @@ library
         Language.PlutusTx.Bool
         Language.PlutusTx.Eq
         Language.PlutusTx.Functor
+        Language.PlutusTx.Lattice
         Language.PlutusTx.List
         Language.PlutusTx.Ord
         Language.PlutusTx.Maybe
