--- a/plutus-playground-server/plutus-playground-server.cabal
+++ b/plutus-playground-server/plutus-playground-server.cabal
@@ -17,6 +17,7 @@ data-files:
     usecases/Game.hs
     usecases/Messages.hs
     usecases/Vesting.hs
+    usecases/Starter.hs
     test/gists1.json
 
 source-repository head
@@ -90,6 +91,7 @@ library plutus-playground-usecases
         Game
         Messages
         Vesting
+        Starter
     default-language: Haskell2010
     ghc-options: -Wall -Wcompat
                  -Wincomplete-uni-patterns -Wincomplete-record-updates
