--- a/metatheory/plc-agda.cabal
+++ b/metatheory/plc-agda.cabal
@@ -122,6 +122,7 @@ executable plc-agda
                        ieee754 -any,
                        cryptonite -any,
                        memory -any,
+                       optparse-applicative -any,
                        language-plutus-core -any
   default-language:    Haskell2010
   ghc-options: -fwarn-incomplete-patterns -fno-warn-overlapping-patterns
