--- a/marlowe-playground-server/marlowe-playground-server.cabal
+++ b/marlowe-playground-server/marlowe-playground-server.cabal
@@ -69,11 +69,14 @@ executable marlowe-playground-server
         Webserver
         PSGenerator
         Types
-    hs-source-dirs: app
+        Escrow
+        CouponBondGuaranteed
+        ZeroCouponBond
+        Swap
+    hs-source-dirs: app contracts
     default-language: Haskell2010
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                  -Wincomplete-uni-patterns -Wincomplete-record-updates
-                 -Wmissing-import-lists
     build-depends:
         aeson -any,
         base -any,
@@ -85,6 +88,7 @@ executable marlowe-playground-server
         http-types -any,
         playground-common -any,
         lens -any,
+        marlowe -any,
         marlowe-playground-server -any,
         monad-logger -any,
         mtl -any,
