--- a/plutus-tutorial/plutus-tutorial.cabal
+++ b/plutus-tutorial/plutus-tutorial.cabal
@@ -44,10 +44,9 @@ common lang
     if flag(defer-plugin-errors)
         ghc-options: -fplugin-opt Language.PlutusTx.Plugin:defer-errors
 
-test-suite tutorial-doctests
-    type: exitcode-stdio-1.0
+executable tutorial-doctests
+    import: lang
     hs-source-dirs: doctest
-    default-language: Haskell2010
     main-is: Main.hs
     ghc-options: -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc -Wno-unused-imports
     build-tool-depends: unlit:unlit -any, doctest:doctest -any
