--- a/plutus-tx/plutus-tx.cabal
+++ b/plutus-tx/plutus-tx.cabal
@@ -49,6 +49,7 @@ library
         Language.PlutusTx.List
         Language.PlutusTx.Ord
         Language.PlutusTx.Maybe
+        Language.PlutusTx.Numeric
         Language.PlutusTx.Semigroup
         Language.PlutusTx.Monoid
         Language.PlutusTx.AssocMap
