--- a/plutus-use-cases/plutus-use-cases.cabal
+++ b/plutus-use-cases/plutus-use-cases.cabal
@@ -66,7 +66,8 @@ library
         plutus-emulator -any,
         template-haskell -any,
         lens -any,
-        text -any
+        text -any,
+        prettyprinter -any
 
     if flag(defer-plugin-errors)
         ghc-options: -fplugin-opt Language.PlutusTx.Plugin:defer-errors
